<resources>
    <string name="networkscan_name">网络检测</string>
    <string-array name="main_cycleInterval">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>15</item>
    </string-array>

    <string-array name="main_errScanCount">
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string-array name="main_connect">
        <item>223.5.5.5</item>
        <item>223.6.6.6</item>
        <item>www.baidu.com</item>
    </string-array>
    <string name="main_select_model">Please select the current model</string>
    <string name="main_net_check_interval">Network check interval (minutes)</string>
    <string name="main_net_err_count">Network abnormal scan count</string>
    <string name="main_net_abnormal_example">For example: connection timed out, connection failed, not ready</string>
    <string name="main_net_default_address">Default access address</string>
    <string name="main_net_delete">Delete</string>
    <string name="main_net_add">Add</string>
    <string name="main_save_re_enable">Save and re-enable</string>
    <string name="main_off_service">Turn off background services</string>
    <string name="main_on_service">Turn on background services</string>
    <string name="main_input_link_addr">Please enter the link address</string>
    <string name="main_dialog_save">Save</string>
    <string name="main_input_ok_addr">Please enter the correct address!</string>
    <string name="main_input_ok_model">Please enter the correct model!</string>
    <string name="main_input_model_name">Please enter the  model name</string>
    <string name="main_input_model_command">Please enter the  model command</string>
    <string name="main_first_start_set_model">When starting up for the first time, add a model for selection</string>
    <string name="main_system_model_type">Built-in models, please do not delete!</string>
    <string name="main_system_link">The system has a built-in link address, please do not delete it!</string>
    <string name="main_exist_model_type_rename">The database has the same model, please change the name!</string>
    <string name="main_exist_link_rename">The database has the same link address, please change the name!</string>
    <string name="main_model_type_err_prompt">*If it is wrong, please choose below</string>
    <string name="main_now_model_type">Your current model is：</string>
</resources>
