<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.face.lte_networkscan.ui.NetWorkScanViewModule" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_now_model_type"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.modelTypeName}"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--循环间隔-->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/group_count_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.startTimeTv}"
                    android:textSize="13sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@={viewModel.exeuTimeTv}"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tvErrCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvTotal"
                        android:layout_marginTop="15dp"
                        android:text="@={viewModel.errCountTv}"
                        android:textSize="13sp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/btn_radius_bg"
                        android:text="清除统计"
                        binding:onClickCommand="@{viewModel.clearCacheClick}" />
                </RelativeLayout>
            </LinearLayout>

            <!--循环间隔-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_net_check_interval"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/txt_radius_bg"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_cycle_interval"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_net_err_count"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_net_abnormal_example"
                android:textSize="11sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/txt_radius_bg"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_err_scan_count"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/main_net_default_address"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/txt_radius_bg"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_net_connect"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_net_delete"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        binding:onClickCommand="@{viewModel.delAddrClick}" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:background="@color/gray" />

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/main_net_add"
                        android:textColor="@color/blue"
                        android:textSize="13sp"
                        binding:onClickCommand="@{viewModel.addAddrClick}" />
                </LinearLayout>

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_radius_bg"
                android:text="@string/main_save_re_enable"
                android:textSize="12sp"
                binding:onClickCommand="@{viewModel.setParamClick}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_radius_bg"
                android:text="@={viewModel.openCloseTv}"
                android:textSize="12sp"
                binding:onClickCommand="@{viewModel.closeServiceClick}" />

        </LinearLayout>

    </ScrollView>
</layout>
